# NewsKG

./: .env.example  .gitignore  README.md  apply_normalization.py  apply_predicate_normalization.py  config.py  fetch_rss.py  main.py  merge_predicate_duplicates.py  normalize_existing_data.py  normalize_predicates.py  pyproject.toml  requirements.txt  run.sh  run_pipeline.py  run_server.py  test_triple_extraction.py  upload_to_fuseki.py
backend/: __init__.py  config.py  main.py  scheduler.py
backend/models/: schemas.py
backend/routers/: entities.py  graph.py  stats.py
backend/services/: __init__.py  graph_builder.py  sparql_client.py  sparql_client_v2.py
dictionaries/: __init__.py  loader.py  organizations.json  persons.json  places.json
dictionaries/predicates/: predicate_master.json
extractors/: __init__.py  base.py  entity_extractor.py  entity_normalizer.py  entity_resolver.py  llm_client.py  llm_extractor.py  predicate_normalizer.py  statement_extractor.py
extractors/patterns/: __init__.py  disaster.py  election.py  policy.py
frontend/: index.html  test_physics.html
frontend/css/: style.css
frontend/js/: api.js  app.js  controls.js  detail-panel.js  graph.js  graph.js.backup
ontology/: __init__.py  newskg.ttl  newskg_v2.ttl  shapes.ttl
pipeline/: __init__.py  fuseki_uploader.py  processor.py  processor_v2.py  rdf_generator.py  rdf_generator_v2.py  validator.py
